--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /* your code */
+table{
+	background-color:white;
+	border:1px solid gray;
+	border-radius:4px;
+}
+th{
+	background-color:blue;
+}
+table>tr>tbody>td>nth-child(even){
+	background-color: gray;
+}
